# ProjectParagon

./: .gitignore  AutonomusMovement.py  ImageCapture.py  KeyPressModule.py  KeyboardControl.py  README.md
payload_drone/: README.md
sensor_drone/: README.md  iris_runway.sdf  launch_sim.sh  launch_sim_no_gz.sh  model.sdf
sensor_drone/drone_ws/auto_uav/: package.xml
sensor_drone/drone_ws/auto_uav/src/: basic_flight_controller.cpp
sensor_drone/drone_ws/src/auto_uav/: CMakeLists.txt  package.xml
sensor_drone/drone_ws/src/auto_uav/launch/: auto_uav_launch.py  launch_sim.py
sensor_drone/drone_ws/src/auto_uav/src/: basic_flight_controller.cpp  drone_constants.hpp  drone_state.hpp  lidar_bridge.cpp  mission_controller.cpp  navigator.cpp  path_finder.cpp  thermal_camera_bridge.cpp
sensor_drone/drone_ws/src/auto_uav/src/a-star/: main.cpp
sensor_drone/drone_ws/src/auto_uav/src/a-star/src/: AStar.hpp
sensor_drone/drone_ws/src/auto_uav_msgs/: CMakeLists.txt  package.xml
sensor_drone/drone_ws/src/auto_uav_msgs/srv/: SetMissionState.srv  UpdateNextTarget.srv
sensor_drone/drone_ws/src/drone_control/: CMakeLists.txt  package.xml
sensor_drone/drone_ws/src/test_flights/: CMakeLists.txt  package.xml
sensor_drone/drone_ws/src/test_flights/src/: test_controller.cpp
sensor_drone/mission_planner/: gps_path.py
tello_drone/: BasicMovements.py  ControlAndCapture.py  README.md  requirements.txt
