<?xml version="1.0"?>
<package format="3">
  <name>auto_uav</name>
  <version>0.1.0</version>
  <description>Autonomous companion system for wildfire sensor drone.</description>
  <maintainer email="bwaldropw@aol.com">Brendan Waldrop</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build, execution, and runtime dependencies -->
  <depend>geographic_msgs</depend>
  <depend>rclcpp</depend>
  <depend>mavros_msgs</depend>
  <depend>auto_uav_msgs</depend>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>