<?xml version="1.0"?>
<package format="3">
  <name>auto_uav_msgs</name>
  <version>0.1.0</version>
  <description>Message definitions for the auto_uav package.</description>
  <maintainer email="bwaldropw@aol.com">Brendan Waldrop</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Dependencies -->
  <depend>geographic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rosidl_default_runtime</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>